# market-analysis

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml  tasks.txt
docs/: backtest-results.md  decisions.md  docker.md  new_decisions  setup.md
infra/: README.md
prompts/: analysis.md
src/asr/: __init__.py  cli.py  config.py  pipeline.py  ratelimit.py
src/asr/agents/: graph.py
src/asr/app/: __init__.py
src/asr/backtest/: engine.py  metrics.py  strategies.py
src/asr/features/: build.py  indicators.py  schema.py  signals.py
src/asr/ingest/: adjust.py  bhavcopy.py  corporate_actions.py  instruments.py  ohlcv.py  prices.py  upstox_client.py
src/asr/news/: extract.py  fetch.py  materiality.py  nse.py  schema.py  upstox_news.py
src/asr/pack/: build.py  context.py
src/asr/quality/: checks.py
src/asr/storage/: base.py  bigquery_adapter.py  duckdb_adapter.py
tests/: conftest.py  test_backtest.py  test_features_build.py  test_indicators.py  test_instruments.py  test_materiality_context.py  test_news_fetch.py  test_news_sources.py  test_ohlcv.py  test_prices_adjust.py  test_quality.py  test_signals_pack.py  test_storage.py  test_upstox_client.py
universe/: README.md
