[project]
name = "agentic-stock-research"
version = "0.1.0"
description = "Grounded agentic stock research for Indian markets (research-only)"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "httpx>=0.27",
  "pandas>=2.2",
  "pyarrow>=17.0",
  "duckdb>=1.1",
  "tenacity>=9.0",
  "typer>=0.12",
  "rich>=13.7",
  "python-dotenv>=1.0",
  # --- Phase 3 (indicators) ---
  "pandas-ta>=0.3.14b0",   # current release needs numpy>=2.2 (pandas>=2.2 is compatible)
  # --- Phase 4-5 (LLM / agents) ---
  "langchain-anthropic>=0.3",
  "langgraph>=0.2",
  # --- Prod storage (Phase 8-9); optional locally ---
  "google-cloud-bigquery>=3.25",
  "google-cloud-bigquery-storage>=2.27",
]

[project.optional-dependencies]
# We call the Upstox REST API directly with httpx (see ingest/upstox_client.py) rather
# than the official SDK — fewer moving parts, and the read-only surface we need is small.
dev = ["pytest>=8", "ruff>=0.6", "ipython>=8"]

[project.scripts]
asr = "asr.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# typer.Option() in a default is the framework's idiom, not a mutable-default bug.
"src/asr/cli.py" = ["B008"]

[tool.ruff.format]
docstring-code-format = true

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
